Dark mode: Fix cookies notification icons

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -1076,7 +1076,7 @@ html.dark-mode ._54nc {
 	border-color: var(--container-color) !important;
 }
 /* Cookies notification: icons */
-html.dark-mode .sp_ng1YXMZLXub {
+html.dark-mode .img.sp_AP2jSXRv6iu {
 	filter: invert(0.66);
 }
 /* Cookies notification: rectangular boxes */
